# macroroni

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  makconfig
res/: macroroni_128.xpm
source/: mAbout.cpp  mAbout.hpp  mApp.cpp  mApp.hpp  mStorage.cpp  mStorage.hpp  mTray.cpp  mTray.hpp  mTrayIcon.cpp  mTrayIcon.hpp  mWindow.cpp  mWindow.hpp  threadmap.hpp  version.h.in
source/res/: add_22.xpm  delete_22.xpm  macroroni.rc  macroroni_128.xpm  macroroni_24.xpm  macroroni_32.xpm  save_22.xpm
