CMAKE_MINIMUM_REQUIRED(VERSION 3.8...3.15)
PROJECT (mak LANGUAGES CXX)

SET (_VERSION_MAJOR 0)
SET (_VERSION_MINOR 0)
SET (_VERSION_REVISION 9)

CONFIGURE_FILE (
  "${PROJECT_SOURCE_DIR}/source/version.h.in"
  "${PROJECT_BINARY_DIR}/gen/version.h"
)

IF(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
ENDIF(NOT CMAKE_BUILD_TYPE)

# Variables used later in branches
SET(C_FLAGS )
SET(L_FLAGS )

#Check compiler, and set flags appropriately
IF("${CMAKE_CXX_COMPILER_ID}" MATCHES "MSVC")
  SET(C_FLAGS "${C_FLAGS} /DWIN32 /D_WIN32 /D_WINDOWS /W3 /GR /D_CRT_SECURE_NO_WARNINGS /DNOMINMAX /EHsc")
  SET(L_FLAGS "${L_FLAGS} /WX /INCREMENTAL:NO")
  IF("${CMAKE_BUILD_TYPE}" MATCHES Release)
    SET(C_FLAGS "${C_FLAGS} /02 /DNDEBUG /MD")
  ELSE()
    SET(C_FLAGS "${C_FLAGS} /MDd /D_DEBUG")
  ENDIF()
ELSEIF("${CMAKE_CXX_COMPILER_ID}" MATCHES "(GNU|Clang)")
  IF("${CMAKE_BUILD_TYPE}" MATCHES Release)
    SET(C_FLAGS "${C_FLAGS} -O3 -DNDEBUG")
  ELSE()
    SET(C_FLAGS "${C_FLAGS} -Wall -g -D_DEBUG")
  ENDIF()
ENDIF()

INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/gen)

FILE(GLOB SOURCES "${PROJECT_SOURCE_DIR}/source/*.cpp")

SET(wxBUILD_SHARED OFF)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/include/wxWidgets ${PROJECT_BINARY_DIR}/wxWidgets)

IF("${CMAKE_CXX_COMPILER_ID}" MATCHES "MSVC")
    ADD_EXECUTABLE(mak WIN32 ${SOURCES} ${PROJECT_SOURCE_DIR}/source/res/macroroni.rc)
ELSE()
    ADD_EXECUTABLE(mak ${SOURCES})
ENDIF()
TARGET_LINK_LIBRARIES(mak wx::net wx::core wx::base)
TARGET_COMPILE_FEATURES(mak PUBLIC cxx_std_17)

# Set compile flags
SET_PROPERTY(TARGET ${PROJECT_NAME} APPEND_STRING PROPERTY COMPILE_FLAGS ${C_FLAGS})
SET_PROPERTY(TARGET ${PROJECT_NAME} APPEND_STRING PROPERTY LINK_FLAGS ${L_FLAGS})
